<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!--Add toolbar layout-->
    <include layout="@layout/toolbar_layout" />

    <ImageView
        android:id="@+id/selectedPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/photoNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/photo_camera"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/image_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/photoDescriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/photo_description"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/image_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textColor="@color/black" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/photoRatingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/photo_rating"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/image_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textColor="@color/black" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/photoUserNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/photo_user_name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/image_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>
    </LinearLayout>
</ScrollView>